k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secureai
  labels:
    name: secureai
    environment: production
    istio-injection: enabled
